--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,3 +28,12 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+
+    - name: Deploy website with FTP
+      uses: SamKirkland/FTP-Deploy-Action@3.1.1
+      with:
+        ftp-server: ${{ secrets.FTP_SERVER }}
+        ftp-username: ${{ secrets.FTP_USERNAME }}
+        ftp-password: ${{ secrets.FTP_PASSWORD}}
+        local-dir: ./
+        git-ftp-args: --dry-run
