--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,11 +29,23 @@ jobs:
       run: |
         python manage.py test
 
-    - name: Deploy website with FTP
-      uses: SamKirkland/FTP-Deploy-Action@3.1.1
-      with:
-        ftp-server: ${{ secrets.FTP_SERVER }}
-        ftp-username: ${{ secrets.FTP_USERNAME }}
-        ftp-password: ${{ secrets.FTP_PASSWORD}}
-        local-dir: ./
-        git-ftp-args: --dry-run
+name: Publish Website to CPanel
+on:
+push:
+branches:
+- master
+jobs:
+FTP-Deploy-Action:
+name: FTP-Deploy-Action
+needs: Proof-HTML
+runs-on: ubuntu-latest
+steps:
+- uses: actions/checkout@v2.1.0
+with:
+fetch-depth: 2
+- name: FTP-Deploy-Action
+uses: SamKirkland/FTP-Deploy-Action@4.3.0
+with:
+server: ${{ secrets.FTP_SERVER }}
+username: ${{ secrets.FTP_USERNAME }}
+password: ${{ secrets.ftp_password }}
